--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,26 +1,36 @@
 .jumbotron, .col-md-12 {
-    box-shadow: 0px 4px 6px slategray; 
+    /* box-shadow: 0px 4px 6px slategray;  */
 }
 
 td, th {
     text-align: center;
 }
 
+/* body {
+    background: url("../images/train.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+} */
+
 .clock {
     float: right;
     font-size: 50px;
-    color: rgba(173, 216, 230, 0.75);
+    /* color: rgba(76, 159, 187, 0.75); */
+    color: rgba(255, 255, 255, 0.60);
     font-family: 'Montserrat', sans-serif;
 }
 
-.col-md-12 {
+.col-md-8 {
     padding: 0px 0px;
     margin-bottom: 15px;
 }
 
 .col-md-4 {
-    margin: 0px 15px 0px 15px;
+    /* margin: 0px 15px 0px 15px; */
+    padding: 0px;
 }
+
+
 
 .jumbotron h1 {
     /* font-family: 'Roboto', sans-serif; */
@@ -32,8 +42,14 @@ td, th {
 }
 
 .jumbotron {
-    background-color: #006dcc;
-    margin: 0px 10px 20px 10px;
+    /* background-color: #006dcc; */
+    /* margin: 0px 10px 20px 10px; */
+    /* background: none; */
+    background: url("../images/train2.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+    padding: 50px 20px 75px 20px;
+    margin: 0px;
 }
 
 .jumbotron h3 {
@@ -59,4 +75,10 @@ tr:nth-child(even) {
     background-color: rgba(173, 216, 230, 0.50);
 }
 
+.row {
+    /* margin-top: -200px; */
+    margin-left: 20px;
+    margin-right: 20px;
 }
+
+
