--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -126,6 +126,17 @@ tr:hover {
 
 }
 
+footer {
+    background-color: black;
+    height: 50px;
+    text-align: center;
+    font-family: 'Raleway', sans-serif;
+    font-size: 15px;
+    line-height: 40px;
+    color: white;
+
+}
+
 
 
 
