adjusted more media queries to preserve appearance of jumbotron

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,6 +19,7 @@ body {
     /* color: rgba(76, 159, 187, 0.75); */
     color: rgba(255, 255, 255, 0.6);
     font-family: 'Montserrat', sans-serif;
+    margin-left: 30px;
 }
 
 .card {
@@ -126,7 +127,7 @@ tr:hover {
 
 }
 
-footer {
+#footer {
     background-color: black;
     height: 50px;
     text-align: center;
@@ -134,6 +135,37 @@ footer {
     font-size: 15px;
     line-height: 40px;
     color: white;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    margin-top: 10px;
+}
+
+#page-container {
+    position: relative;
+    min-height: 100vh;
+  }
+  #content-wrap {
+    padding-bottom: 2.5rem;    /* Footer height */
+  }
+
+@media screen and (max-width: 800px) {
+    .jumbotron h1 {
+        font-size: 75px;
+        line-height: 70px;
+        
+    }
+
+    .jumbotron h3 {
+        font-size: 20px;
+    }
+
+    .jumbotron {
+        padding: 20px 20px 150px 20px;
+    }
+    .clock {
+        font-size: 40px;
+    }
 
 }
 
@@ -149,7 +181,7 @@ footer {
     }
 
     .clock {
-        font-size: 40px;
+        font-size: 35px;
     }
 
     .card-header {
@@ -166,6 +198,52 @@ footer {
 
     th, td, tr, label, input {
         font-size: 12px
+    }
+
+    .jumbotron h1 {
+        font-size: 75px;
+        line-height: 70px;
+        
+    }
+
+    .jumbotron h3 {
+        font-size: 15px;
+    }
+
+    .jumbotron {
+        padding: 20px 20px 60px 20px;
+    }
+  }
+
+@media screen and (max-width: 360px) {
+    
+
+    .clock {
+        font-size: 25px;
+    }
+
+    
+
+    th, td, tr, label, input {
+        font-size: 10px
+    }
+
+    .jumbotron h1 {
+        font-size: 65px;
+        line-height: 60px;
+        
+    }
+
+    .jumbotron h3 {
+        font-size: 20px;
+    }
+
+    .jumbotron {
+        padding: 20px 20px 45px 20px;
+    }
+
+    .card-header {
+        font-size: 20px;
     }
   }
 
