--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -30,7 +30,7 @@ body {
 
 .col-md-8 {
     padding: 0px 0px;
-    margin-bottom: 15px;
+    margin-bottom: 10px;
 }
 
 .col-md-4 {
@@ -46,6 +46,7 @@ body {
     font-size: 100px;
     line-height: 90px;
     font-family: 'Raleway', sans-serif;
+    font-weight: bold;
 
 }
 
@@ -164,7 +165,7 @@ tr:hover {
         padding: 20px 20px 150px 20px;
     }
     .clock {
-        font-size: 40px;
+        font-size: 35px;
     }
 
 }
@@ -181,7 +182,7 @@ tr:hover {
     }
 
     .clock {
-        font-size: 35px;
+        font-size: 30px;
     }
 
     .card-header {
