--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,9 +17,17 @@ body {
     float: right;
     font-size: 50px;
     /* color: rgba(76, 159, 187, 0.75); */
-    color: rgba(255, 255, 255, 0.6);
+    color: rgba(255, 255, 255, 0.8);
     font-family: 'Montserrat', sans-serif;
     margin-left: 30px;
+    /* background-color: rgba(56, 46, 32, 0.6); */
+    background-color: rgba(255, 255, 255, 0.20);
+    padding: 5px 20px 5px 20px;
+    border-radius: 10px;
+    
+    border-top: 1px solid rgba(255, 255, 255, 0.50);
+    border-bottom: 1px solid rgba(27, 17, 8, 0.781);
+    
 }
 
 .card {
@@ -166,6 +174,7 @@ tr:hover {
     }
     .clock {
         font-size: 35px;
+        margin-left:50px;
     }
 
 }
@@ -198,7 +207,7 @@ tr:hover {
     }
 
     th, td, tr, label, input {
-        font-size: 12px
+        font-size: 12px !important;
     }
 
     .jumbotron h1 {
@@ -226,7 +235,7 @@ tr:hover {
     
 
     th, td, tr, label, input {
-        font-size: 10px
+        font-size: 11px !important;
     }
 
     .jumbotron h1 {
