--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,8 +16,10 @@ body {
 .clock {
     float: right;
     font-size: 50px;
+    
     /* color: rgba(76, 159, 187, 0.75); */
-    color: rgba(255, 255, 255, 0.8);
+    /* color: rgba(255, 255, 255, 0.8); */
+    color:  rgb(10, 51, 63);
     font-family: 'Montserrat', sans-serif;
     margin-left: 30px;
     /* background-color: rgba(56, 46, 32, 0.6); */
