--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,10 +16,11 @@ body {
 .clock {
     float: right;
     font-size: 50px;
+    letter-spacing:5px;
     
     /* color: rgba(76, 159, 187, 0.75); */
-    /* color: rgba(255, 255, 255, 0.8); */
-    color:  rgb(10, 51, 63);
+    color: rgba(255, 255, 255, 0.90);
+    /* color:  rgb(10, 51, 63); */
     font-family: 'Montserrat', sans-serif;
     margin-left: 30px;
     /* background-color: rgba(56, 46, 32, 0.6); */
@@ -27,7 +28,7 @@ body {
     padding: 5px 20px 5px 20px;
     border-radius: 10px;
     
-    border-top: 1px solid rgba(255, 255, 255, 0.50);
+    border-top: 1px solid rgba(255, 255, 255, 0.80);
     border-bottom: 1px solid rgba(27, 17, 8, 0.781);
     
 }
@@ -76,6 +77,7 @@ body {
     color: white;
     font-family: 'Raleway', sans-serif;
     padding-left: 3px;
+    letter-spacing: 1px;
 
 }
 
