--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,4 @@
-.jumbotron, .card {
+.jumbotron, .card, .clock {
     /* box-shadow: 0px 4px 6px slategray; */
     box-shadow: 0px 5px 8px rgba(0, 0, 0, 0.75);
 
@@ -16,19 +16,21 @@ body {
 .clock {
     float: right;
     font-size: 50px;
-    letter-spacing:5px;
+    letter-spacing:3px;
+    text-shadow: 2px 0px 6px rgba(28, 48, 48, 0.719);
     
     /* color: rgba(76, 159, 187, 0.75); */
     color: rgba(255, 255, 255, 0.90);
     /* color:  rgb(10, 51, 63); */
     font-family: 'Montserrat', sans-serif;
+    
     margin-left: 30px;
-    /* background-color: rgba(56, 46, 32, 0.6); */
+    /* background-color: rgba(56, 46, 32, 0.6); */ 
     background-color: rgba(255, 255, 255, 0.4);
     padding: 5px 20px 5px 20px;
     border-radius: 10px;
     
-    border-top: 1px solid rgba(255, 255, 255, 0.80);
+    border-top: 2px solid rgba(255, 255, 255, 0.80);
     border-bottom: 1px solid rgba(27, 17, 8, 0.781);
     
 }
@@ -38,6 +40,9 @@ body {
     border: white 1px solid;
     border-radius: 10px;
 }
+
+
+
 
 .col-md-8 {
     padding: 0px 0px;
@@ -130,6 +135,7 @@ tr:hover {
     margin-top: -100px;
     margin-left: 20px;
     margin-right: 20px;
+    margin-bottom: 20px;
 }
 
 .btn {
