--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,9 @@
+@font-face {
+    font-family: montserrat;
+    src: url('../fonts/Montserrat-Regular.ttf') format("truetype");
+}
+
+
 .jumbotron, .card, .clock {
     box-shadow: 0px 5px 8px rgba(0, 0, 0, 0.75);
 }
@@ -16,7 +22,7 @@ body {
     letter-spacing:3px;
     text-shadow: 2px 0px 6px rgba(28, 48, 48, 0.719);
     color: rgba(255, 255, 255, 0.90);
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'montserrat';
     margin-left: 30px;
     background-color: rgba(255, 255, 255, 0.4);
     padding: 5px 20px 5px 20px;
